fixed blog post alignment

--- a/app/assets/stylesheets/bootstrap_and _customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and _customization.css.scss
@@ -13,7 +13,7 @@ $jumbotron-bg:               white;
 @import 'bootstrap';
 
 h1 {
-	font-size: 30px;
+	font-size: 25px;
 }
 
 h2 {
@@ -39,7 +39,6 @@ h4 {
 h5 {
 	font-size: 9px;
 }
-
 
 .center {
      text-align: center;
