--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -8,10 +8,11 @@
 
 .box {
   margin: 5px;
-  width: 214px;
+  width: 215px;
 }
 
 .box img {
   width: 100%;
 }
+
 
